# dolly

./: Cargo.toml  README.adoc
examples/bdpi_rust/: dolly.toml
examples/bdpi_rust/src/: Cargo.toml  ExampleBDPI.bsv  build.rs
examples/bdpi_rust/src/src/: lib.rs
examples/bdpi_rust/tests/: ExampleBDPI_tb.bsv
examples/simple/: bsvproject.toml  dolly.toml
examples/simple/src/: Simple.bsv  mod.bsv
examples/simple/src/another_module/: AnotherModule.bsv  mod.bsv
examples/simple/src/another_module/embedded_module/: EmbeddedModule.bsv  EmbeddedModule_tb.bsv
examples/simple/src/second_module/: SecondModule.bsv
examples/simple/tests/: SimpleTest.bsv  simple.bsv
src/: builder.rs  main.rs  project.rs
