[package]
name = "dolly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
colored = "2.0.0"
convert_case = "0.6.0"
itertools = "0.12.0"
log = "0.4.17"
pretty_env_logger = "0.5.0"
regex = { version = "1.7.1", features = ["use_std"] }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
toml = "0.8.8"
